--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,8 @@
 {
+  "version": "1.0",
   "manifest_version": 3,
-  "name": "Chrome Extension with React & Webpack",
-  "description": "A chrome extension boilerplate built with React 17, Webpack 5, and Webpack Dev Server 4",
+  "name": "COMO",
+  "description": "가상화폐 시세조회 크롬 익스텐션 (업비트, 빗썸 시세 지원)",
   "options_page": "options.html",
   "background": { "service_worker": "background.bundle.js" },
   "action": {
