--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "chrome-extension-boilerplate-react",
-  "version": "5.0.4",
-  "description": "A chrome extension boilerplate built with React 18, Webpack 5, and Webpack Dev Server 4",
-  "license": "MIT",
+  "name": "chrome-extension-coin-monitering",
+  "version": "1,0",
+  "description": "가상화폐 시세조회 크롬 익스텐션 (업비트, 빗썸 시세 지원)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lxieyang/chrome-extension-boilerplate-react.git"
+    "url": "https://github.com/hunhunseunghun/como_ver1.1"
   },
   "scripts": {
     "build": "node utils/build.js",
