--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,10 +22,9 @@
       "css": ["content.styles.css"]
     }
   ],
-  "devtools_page": "devtools.html",
   "web_accessible_resources": [
     {
-      "resources": ["content.styles.css", "icon-128.png", "icon-34.png"],
+      "resources": ["content.styles.css", "defaultcomologo.png"],
       "matches": []
     }
   ]
