for webstore upload

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chrome-extension-coin-monitering",
+  "name": "COMO_ver1.1",
   "version": "1,0",
   "description": "가상화폐 시세조회 크롬 익스텐션 (업비트, 빗썸 시세 지원)",
   "repository": {
