--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "COMO - 가상화폐 간편하게 모니터링하기!",
-  "version": "1.0.1",
+  "name": "코모(COMO) - 가상화폐 거래소 시세 모니터링 (비트코인,이더리움 등)",
+  "version": "1.0.2",
   "description": "업비트, 빗썸 거래소 코인(가상화폐) 시세 조회",
   "repository": {
     "type": "git",
