--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.0.1",
+  "version": "1.0.2",
   "manifest_version": 3,
-  "name": "COMO - 가상화폐 간편하게 모니터링하기! ",
+  "name": "코모(COMO) - 가상화폐 거래소 시세 모니터링 (비트코인,이더리움 등)",
   "description": "업비트, 빗썸 거래소 코인(가상화폐) 시세 조회",
   "options_page": "options.html",
   "background": { "service_worker": "background.bundle.js" },
