deleting legacy code

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "코모(COMO) - 가상화폐 거래소 시세 모니터링 (비트코인,이더리움 등)",
-  "version": "1.0.3",
-  "description": "업비트, 빗썸 거래소 코인(가상화폐) 시세 조회",
+  "name": "코모(COMO) - 가상화폐 거래소 시세 모니터링 / 비트코인(Bitcoin) / Crypto Currency",
+  "version": "1.0.4",
+  "description": "Upbit, bithumb 거래소 가상화폐 시세 조회",
   "repository": {
     "type": "git",
     "url": "https://github.com/hunhunseunghun/como_ver1.1"
