modifed manifes title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "코모(COMO) - 가상화폐 거래소 시세 모니터링 / 비트코인(Bitcoin) / Crypto Currency",
+  "name": "COMO - 가상화폐 거래소 시세 모니터링 / 비트코인(Bitcoin) / Crypto Currency",
   "version": "1.0.4",
   "description": "Upbit, bithumb 거래소 가상화폐 시세 조회",
   "repository": {
