modifed package.json,  manifest name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "COMO-가상화폐 시세/비트코인(Bitcoin,Cryptocurrency)",
+  "name": "COMO-가상화폐 시세 비트코인(Bitcoin&Cryptocurrencies)",
   "version": "1.0.5",
   "description": "Upbit, bithumb 거래소 가상화폐 시세 조회",
   "repository": {
