--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "COMO-가상화폐 시세 비트코인(Bitcoin&Cryptocurrencies)",
   "version": "1.0.5",
-  "description": "Upbit, bithumb 거래소 가상화폐 시세 조회",
+  "description": "Upbit, bithumb 거래소 암호화폐 시세 조회",
   "repository": {
     "type": "git",
     "url": "https://github.com/hunhunseunghun/como_ver1.1"
